Finished code and added actual db

--- a/FabricWebApi/appsettings.json
+++ b/FabricWebApi/appsettings.json
@@ -11,8 +11,13 @@
     "Audience": "localhost",
     "SecretKey": "ourverysecretkeythatshoulddefinitelynotbehere"
   },
+  "UseInMemory": false,
+  "ConnectionStrings": {
+    "FabricWeb": "Persist Security Info=False;User ID=fabricweb;Password=yNqJrgF7Dsa1F3DuKckM;Initial Catalog=FabricWeb;Server=192.168.1.114;Encrypt=True;TrustServerCertificate=True"
+  },
   "Administrators": [
-    "SilvanBauer"
+    "SilvanBauer",
+    "RafaelRufener"
   ],
   "IsLinux": false,
   "CommandLin": "/home/fabricweb/test.sh",
