Added pattern and youtube capabilities

--- a/FabricWebApi/appsettings.json
+++ b/FabricWebApi/appsettings.json
@@ -20,6 +20,6 @@
     "RafaelRufener"
   ],
   "IsLinux": false,
-  "CommandLin": "/home/fabricweb/test.sh",
+  "CommandLin": "/home/fabricweb/fabricrequest.sh",
   "CommandWin": "pwd"
 }
