--- a/FabricWebApi/appsettings.Development.json
+++ b/FabricWebApi/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Administrators": [
+    "Test"
+  ],
+  "StaticUsers": [
+    {
+      "Username": "Test",
+      "Password": "jZae727K08KaOmKSgOaGzww/XVqGr/PKEgIMkjrcbJI="
+    }
+  ],
+  "IsLinux": false
 }
