Updated sample password

--- a/FabricWebApi/appsettings.json
+++ b/FabricWebApi/appsettings.json
@@ -13,7 +13,7 @@
   },
   "UseInMemory": true,
   "ConnectionStrings": {
-    "FabricWeb": "Persist Security Info=False;User ID=fabricweb;Password=yNqJrgF7Dsa1F3DuKckM;Initial Catalog=FabricWeb;Server=192.168.1.114;Encrypt=True;TrustServerCertificate=True"
+    "FabricWeb": "Persist Security Info=False;User ID=fabricweb;Password=example;Initial Catalog=FabricWeb;Server=192.168.1.114;Encrypt=True;TrustServerCertificate=True"
   },
   "Administrators": [
   ],
